[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "SAPEFT"
version = "1.0.0"
description = "Computer vision stack for pothole segmentation and monocular geometry estimation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Benedictus Ryu Gunawan" }
]
dependencies = [
  "numpy>=1.26,<3.0",
  "scipy>=1.11,<2.0",
  "opencv-python-headless>=4.13.0,<5.0",
  "pillow>=10.3,<12.0",
  "scikit-image>=0.24,<1.0",
  "shapely>=2.0,<3.0",
  "albumentations>=1.4,<2.0",
  "pyyaml>=6.0,<7.0",
  "tqdm>=4.66,<5.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.9,<4.0",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "ultralytics>=8.4.23,<9.0.0",
  "timm>=1.0,<2.0",
  "huggingface-hub>=0.24,<1.0",
  "onnxruntime>=1.18,<2.0",
  "pydantic>=2.8,<3.0",
  "wandb>=0.25.1",
  "python-dotenv>=1.2.2",
  "ipykernel>=6.31.0",
  "peft>=0.18.1",
  "transformers>=4.57.6",
  "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
train = [
  "tensorboard>=2.17,<3.0",
  "clearml>=1.16,<2.0",
  "wandb>=0.17,<1.0"
]
export = [
  "onnx>=1.16,<2.0",
  "onnxsim>=0.4.36,<1.0"
]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "black>=24.8,<25.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "ipykernel>=6.29,<7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pothole_cv"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
